--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
           </li>
 
           <li>
-            <a href="#" class="social-link">
+              <a href="https://twitter.com/JocelynTal55999?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @JocelynTal55999</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
