--- a/index.html
+++ b/index.html
@@ -816,19 +816,21 @@
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/drive20x/" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
 
           <li>
-              <a href="https://twitter.com/JocelynTal55999?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @JocelynTal55999</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <a href="https://twitter.com/Drive20x?ref_src=twsrc%5Etfw">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.linkedin.com/in/abigail-talledos-233658293/" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
