--- a/index.html
+++ b/index.html
@@ -809,11 +809,11 @@
 
         <ul class="social-list">
 
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
+           <li>
+            <a href="https://www.facebook.com/profile.php?id=61553697401288" class="social-link">
+                <ion-icon name="logo-facebook"></ion-icon>
             </a>
-          </li>
+           </li>
 
           <li>
             <a href="https://www.instagram.com/drive20x/" class="social-link">
@@ -841,11 +841,12 @@
             </a>
           </li>
 
+          
           <li>
-            <a href="#" class="social-link">
+            <a href="https://mail.google.com/mail/u/3/#inbox?compose=new" class="social-link">
               <ion-icon name="mail-outline"></ion-icon>
             </a>
-          </li>
+           </li>
 
         </ul>
 
