--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <span id="aria-label-txt">Explorar autom&oacute;viles</span>
         </a>
 
-        <a href="#" class="btn user-btn" aria-label="Profile">
+        <a href="login.html" class="btn user-btn" aria-label="Profile">
           <ion-icon name="person-outline"></ion-icon>
         </a>
 
