--- a/carro.html
+++ b/carro.html
@@ -94,9 +94,9 @@
   </style>
 </head>
 <body>
+<header>
+    <button class="btn"><a href="index.html">Inicio</a></button>
 
-  <header>
-    <button class="btn">Inicio</button>
 </header>
 
 
