--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                       <ion-icon name="heart-outline"></ion-icon>
                     </button>
 
-                    <button class="btn">Rentalo hoy</button>
+                    <button class="btn"><a href="carro.html"> Rentalo hoy</a></button>
 
                   </div>
 
@@ -261,7 +261,7 @@
                       <ion-icon name="heart-outline"></ion-icon>
                     </button>
 
-                    <button class="btn">Rentalo hoy</button>
+                    <button class="btn"><a href="carro2.html">Rentalo hoy</a></button>
 
                   </div>
 
@@ -326,7 +326,7 @@
                       <ion-icon name="heart-outline"></ion-icon>
                     </button>
 
-                    <button class="btn">Rentalo hoy</button>
+                    <button class="btn"><a href="carro3.html">Rentalo hoy</a></button>
 
                   </div>
 
