--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
                   <div class="card-title-wrapper">
                     <h3 class="h3 card-title">
-                      <a href="#">Toyota RAV4</a>
+                      <a href="carro.html">Toyota RAV4</a>
                     </h3>
 
                     <data class="year" value="2021">2021</data>
@@ -217,7 +217,7 @@
 
                   <div class="card-title-wrapper">
                     <h3 class="h3 card-title">
-                      <a href="#">BMW 3 Series</a>
+                      <a href="carro2.html">BMW 3 Series</a>
                     </h3>
 
                     <data class="year" value="2019">2019</data>
@@ -282,7 +282,7 @@
 
                   <div class="card-title-wrapper">
                     <h3 class="h3 card-title">
-                      <a href="#">Volkswagen T-Cross</a>
+                      <a href="carro3.html">Volkswagen T-Cross</a>
                     </h3>
 
                     <data class="year" value="2020">2020</data>
