--- a/carro2.html
+++ b/carro2.html
@@ -56,7 +56,7 @@
     }
 
     .reservation-form {
-      display: flex;
+      display: none;
       flex-direction: column;
       padding: 20px;
       background-color: #fff;
