--- a/carro.html
+++ b/carro.html
@@ -56,7 +56,7 @@
     }
 
     .reservation-form {
-      display: none; /* Inicialmente oculta */
+      display: none;
       flex-direction: column;
       padding: 20px;
       background-color: #fff;
@@ -90,13 +90,16 @@
     button:hover {
       background-color: #45a049;
     }
+
   </style>
 </head>
 <body>
 
   <header>
-    <button class="btn">Inicio</button>
-  </header>
+    <button class="btn"><a href="index.html">Inicio</a></button>
+
+</header>
+
 
   <div class="container">
     <div class="car-container" id="carContainer">
@@ -108,14 +111,17 @@
       <form onsubmit="return realizarReservacion()">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" required>
-        <br>
+       
         <label for="email">Email:</label>
         <input type="email" id="email" required>
-        <br>
-        <br>
+<br>
+<br>
         <label for="dias">Días rentados:</label>
         <input type="number" id="dias" min="1" value="1" required oninput="actualizarTotal()">
+
         <p>Total: $<span id="total">0</span></p>
+
+       
         <button type="submit">Reservar</button>
         <button type="button" onclick="cerrarReservacion()">Cerrar</button>
       </form>
@@ -124,7 +130,7 @@
 
   <script>
     const cars = [
-      { id: 1, marca: 'BMW 3 Series', modelo: '', precio: 350, descripcion: 'es un sedán deportivo de lujo que destaca por su elegante diseño, un rendimiento dinámico y avanzadas características tecnológicas. Conocido por su agilidad en la conducción y su interior sofisticado, el BMW 3 Series ofrece una experiencia de manejo placentera y confortable. Su combinación de estilo, potencia y comodidad lo posiciona como un referente en la categoría de automóviles de gama alta.', imagen: 'BMW.jpg' },
+      { id: 1, marca: 'Toyota', modelo: 'RAV4', precio: 350, descripcion: 'El Toyota RAV4 es un SUV compacto conocido por su versatilidad y eficiencia. Con un diseño moderno y aerodinámico, ofrece un interior espacioso y cómodo. Equipado con tecnología avanzada y características de seguridad, el RAV4 proporciona un rendimiento sólido tanto en carreteras urbanas como en terrenos todoterreno. Su eficiencia de combustible y opciones híbridas lo convierten en una opción popular para aquellos que buscan un vehículo práctico y respetuoso con el medio ambiente.', imagen: 'toy.jpg' },
       // Agrega más carros según sea necesario
     ];
 
@@ -133,7 +139,7 @@
     let precioActual = 0;
 
     function mostrarFormulario(id) {
-      reservationForm.style.display = 'flex'; // Cambiado a 'flex'
+      reservationForm.style.display = 'block';
       // Puedes agregar lógica adicional para prellenar el formulario con detalles del carro
       precioActual = cars.find(car => car.id === id).precio;
       document.getElementById('dias').value = 1;
@@ -148,7 +154,7 @@
       // Agrega lógica de reservación aquí
       alert('Reserva realizada con éxito');
       cerrarReservacion();
-      window.location.href = 'index.html'; // Redirige a la página de inicio
+      window.location.href ='index.html'; // Redirige a la página de inicio
       return false; // Evita que el formulario se envíe y recargue la página
     }
 
@@ -166,7 +172,7 @@
           <h3><center>${car.marca} ${car.modelo}</center></h3>
           <center><img src="${car.imagen}" alt="${car.marca} ${car.modelo}" style="center,width:360px;height:auto;"></center>
           <p>Precio: $${car.precio} al día</p>
-          <p><center> ${car.descripcion}</center></p>
+          <p><center>Descripción: ${car.descripcion}</center></p>
           <button onclick="mostrarFormulario(${car.id})">Reservar</button>
         `;
         carContainer.appendChild(carElement);
