--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link" data-nav-link>Sobre nosotros</a>
+            <a href="nosotros.html" class="navbar-link" data-nav-link>Sobre nosotros</a>
           </li>
 
          
