--- a/carro.html
+++ b/carro.html
@@ -122,8 +122,9 @@
         <p>Total: $<span id="total">0</span></p>
 
        
-        <button type="submit">Reservar</button>
-        <button type="button" onclick="cerrarReservacion()">Cerrar</button>
+       <button type="submit" onclick="window.location.href='https://www.paypal.com/donate/?hosted_button_id=DZGTAXANX853Y'">Reservar</button>
+<button type="button" onclick="cerrarReservacion()">Cerrar</button>
+
       </form>
     </div>
   </div>
