--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
                 <div class="card-content">
 
                   <h3 class="h3 card-title">
-                    <a href="#">Servicios y Beneficios</a>
+                    <a href="Servicios_bene.html">Servicios y Beneficios</a>
                   </h3>
 
                   <div class="card-meta">
@@ -666,7 +666,7 @@
                 <div class="card-content">
 
                   <h3 class="h3 card-title">
-                    <a href="#">Políticas y Condiciones</a>
+                    <a href="poli_cond.html">Políticas y Condiciones</a>
                   </h3>
 
                   <div class="card-meta">
