--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
                   <div class="card-title-wrapper">
                     <h3 class="h3 card-title">
-                      <a href="#">Cadillac Escalade</a>
+                      <a href="carro4.html">Cadillac Escalade</a>
                     </h3>
 
                     <data class="year" value="2020">2020</data>
@@ -391,7 +391,7 @@
                       <ion-icon name="heart-outline"></ion-icon>
                     </button>
 
-                    <button class="btn">Rentalo hoy</button>
+                     <button class="btn"><a href="carro4.html">Rentalo hoy</a></button>
 
                   </div>
 
@@ -412,7 +412,7 @@
 
                   <div class="card-title-wrapper">
                     <h3 class="h3 card-title">
-                      <a href="#">BMW 4 Series GTI</a>
+                      <a href="carro15.html">BMW 4 Series GTI</a>
                     </h3>
 
                     <data class="year" value="2021">2021</data>
@@ -456,7 +456,7 @@
                       <ion-icon name="heart-outline"></ion-icon>
                     </button>
 
-                    <button class="btn">Rentalo ahora</button>
+                      <button class="btn"><a href="carro15.html">Rentalo hoy</a></button>
 
                   </div>
 
@@ -477,7 +477,7 @@
 
                   <div class="card-title-wrapper">
                     <h3 class="h3 card-title">
-                      <a href="#">Volkswagen Passat</a>
+                      <a href="carro16.html">Volkswagen Passat</a>
                     </h3>
 
                     <data class="year" value="2019">2019</data>
@@ -521,7 +521,7 @@
                       <ion-icon name="heart-outline"></ion-icon>
                     </button>
 
-                    <button class="btn">Rentalo ahora</button>
+                       <button class="btn"><a href="carro16.html">Rentalo hoy</a></button>>
 
                   </div>
 
