--- a/carro3.html
+++ b/carro3.html
@@ -56,7 +56,7 @@
     }
 
     .reservation-form {
-      display: flex;
+      display: none;
       flex-direction: column;
       padding: 20px;
       background-color: #fff;
@@ -96,7 +96,7 @@
 <body>
 
   <header>
-    <button class="btn">Inicio</button>
+    <button class="btn"><a href="index.html">Inicio</a></button>
 </header>
 
 
